binrw/tests/ui/invalid_assert_variable.stderr
error[E0425]: cannot find value `does_not_exist` in this scope
 --> $DIR/invalid_assert_variable.rs:5:13
  |
5 | #[br(assert(does_not_exist == 0))]
  |             ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `a` in this scope
  --> $DIR/invalid_assert_variable.rs:12:13
   |
12 | #[br(assert(a == 0))]
   |             ^ help: a local variable with a similar name exists: `b`

error[E0425]: cannot find value `a` in this scope
  --> $DIR/invalid_assert_variable.rs:22:17
   |
22 |     #[br(assert(a == 0))]
   |                 ^ help: a local variable with a similar name exists: `b`
